Add home page component to the page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,8 @@
-
+:root {
+  --pink: #F892D4;
+  --blue: #3974D5;
+  --green: #32BD86;
+  --red: #F3574B;
+  --black: #383435;
+  --white: #EBE7DE;
+}
