Add center search bar and mockdata

--- a/client/src/components/Center/SearchBar/SearchBar.module.css
+++ b/client/src/components/Center/SearchBar/SearchBar.module.css
@@ -2,11 +2,19 @@
   display: flex;
   justify-content: center;
   margin-top: 2rem;
-
+  margin-left: -3.5rem;
 }
 
 input {
   outline: none;
   border: none;
   background-color: var(--white);
+  width: 55%;
+  height: 2rem;
+}
+
+button {
+  border: none;
+  background-color: var(--red);
+  width: 8%;
 }
