--- a/client/src/components/Center/SearchBar/SearchBar.module.css
+++ b/client/src/components/Center/SearchBar/SearchBar.module.css
@@ -11,9 +11,11 @@ input {
   background-color: var(--white);
   width: 55%;
   height: 2rem;
+  transition: all 0.2s ease-in-out 0s;
+  transform: scale(1.04, 1.04);
 }
 
-button {
+.searchButton {
   border: none;
   background-color: var(--red);
   width: 8%;
