Add modal for event

--- a/client/src/components/Center/SearchBar/SearchBar.module.css
+++ b/client/src/components/Center/SearchBar/SearchBar.module.css
@@ -18,5 +18,15 @@ input {
 .searchButton {
   border: none;
   background-color: var(--red);
-  width: 8%;
+  width: 7%;
+  align-content: center;
+  padding: 0 0.72rem;
+}
+
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
 }
