--- a/client/src/components/Center/Center.module.css
+++ b/client/src/components/Center/Center.module.css
@@ -1,5 +1,5 @@
 .CenterContainer{
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-color: var(--blue);
     color: var(--white);
