--- a/client/src/components/Right/Calendar/DatePickr.css
+++ b/client/src/components/Right/Calendar/DatePickr.css
@@ -6,7 +6,8 @@
   justify-content: center;
   color: var(--black);
   padding: 0.5rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  max-height: 95%;
 }
 
 
