--- a/client/src/components/Center/SearchBar/SearchBar.module.css
+++ b/client/src/components/Center/SearchBar/SearchBar.module.css
@@ -5,7 +5,7 @@
   margin-left: -3.5rem;
 }
 
-input {
+.SearchBarContainer > form > input {
   outline: none;
   border: none;
   background-color: var(--white);
