--- a/client/src/components/Modals/CreateEventModal.css
+++ b/client/src/components/Modals/CreateEventModal.css
@@ -5,7 +5,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--pink);
+  background-color: var(--peach);
   z-index: 1000;
   padding: 3% 3% 0 3%;
   font-size: 0.65rem;
