--- a/client/src/components/Left/NavBar/NavBar.module.css
+++ b/client/src/components/Left/NavBar/NavBar.module.css
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 35px;
+  gap: 8vh;
+  font-size: 1.5vw;
 }
 
 .NavBarContainer > button {
