--- a/client/src/components/Right/Forum/ForumList.css
+++ b/client/src/components/Right/Forum/ForumList.css
@@ -1,18 +1,17 @@
 .ForumListContainer {
-  margin-top: 2rem;
   border: 3px solid var(--black);
   display: flex;
   flex-direction: column;
   color: var(--black);
   box-shadow: 9px 9px var(--black); 
-  margin: 5%;
-  max-height: 54%;
+  margin: 2.2vw 1.1vw;
+  max-height: 50vh;
 }
 
 .ForumList_header {
   align-self: center;
-  padding: 0.6rem;
-  font-size: 1.1rem;
+  padding: 1vw;
+  font-size: 1.7vw;
   color: var(--white);
   text-shadow: 2px 2px var(--pink);
 }
@@ -25,16 +24,16 @@
   align-self: center;
   font-size: 0.57rem;
   padding: 0.4rem;
-  max-height: 70%;
-  max-width: 95%;
+  max-height: 40vh;
+  max-width: 27.88vw;
   overflow: scroll;
 }
 
 .ForumListContainer > .forumListBtn { 
   align-self: center;
-  width: 94%;
+  width: 95%;
   border: 3px solid var(--black);
-  font-size: 0.7rem;
+  font-size: 0.9vw;
   margin-bottom: 0.5rem;
 }
 
