--- a/client/src/components/Modals/ForumModal.css
+++ b/client/src/components/Modals/ForumModal.css
@@ -1,30 +1,5 @@
 
 
-.title {
-  font-size: 0.9rem;
-  color: var(--black);
-  text-shadow: 3px 3px var(--white);
-}
-
-.description {
-
-  line-height: 1.1rem;
-
-}
-.date {
-  margin-top: 0.7rem;
-}
-
-
-.closeButtonTwo {
-  font-size: 1.3rem;
-  margin: -7% -7% 1% 0; 
-  color: var(--black);
-  position: absolute;
-  right: 65px;
-  top: 75px;
-}
-
 .btn {
   border: 3px solid var(--black);
 	box-sizing: border-box;
@@ -76,5 +51,9 @@
   top: 40px;
   color: var(--black);
   position: absolute;
+}
+
+.helloThere {
+  margin-top: -7%;
 }
 
