--- a/client/src/components/Modals/ProfileModal.module.css
+++ b/client/src/components/Modals/ProfileModal.module.css
@@ -8,15 +8,16 @@
 }
 
 .profilePic {
-  width: 12vw;
+  width: 170px;
+  height: fit-content;
   margin-right: 3rem;
 }
 
 .profileInfo {
   width: 70%;
   text-align: left;
-  padding: 2rem;
-  font-size: 1.15rem;
+  padding: 1rem;
+  font-size: 1rem;
 
 }
 
