--- a/client/src/components/Modals/SavedEvent.module.css
+++ b/client/src/components/Modals/SavedEvent.module.css
@@ -1,47 +1,26 @@
-.eventsContainer {
-  width: 36vw;
-  height: 73vh;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--peach);
-  z-index: 1000;
-  padding: 3% 4% 3% 4%;
-  font-size: 0.65rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  box-shadow: 9px 9px var(--black);
-}
-
 .sub_eventsContainer {
   height: 90%;
-  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  
 }
+
 .savedEventContainer {
-  width: 85%;
-  position: fixed;
-  top: 8%;
+  width: 440px;
   border: 3px solid var(--black);
   padding: 0.5em;
   max-height: 50%;
   overflow: auto;
+  height: 210px;
+  margin-bottom: 2rem;
 } 
 
 .attendingEventContainer {
-  position: fixed;
-  top: 55%;
-  width: 85%;
+  width: 440px;
   border: 3px solid var(--black);
   padding: 0.5em;
-  max-height: 38%;
+  height: 210px;
   overflow: auto;
 }
 
@@ -77,13 +56,5 @@
   box-shadow: 9px 9px var(--black);
 }
 
-
-.closeButton {
-  font-size: 1.3rem;
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  
-}
 
 
